--- a/genetic-js-website/index.html
+++ b/genetic-js-website/index.html
@@ -20,9 +20,13 @@ body{
     <div style="display:inline-flex;">
         <div style="width:50vw;">
                Best Solution <span id="solution"></span>
+               <div id="best-solution">
+
+               </div>
         </div>
         <div style="width:50vw;">
             Solutions: <span id="iteration">This is one of many solns.</span>
+            <div id='all-solutions'></div>
         </div>
     </div>
 
